[package]
name = "actix-logging"
version = "0.1.0"
authors = ["Jens Nilsson <jens.erik.nilsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = "0.4"
serde_json = "1.0.64"
log4rs="0.13.0"
log="0.4.13"